--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,31 @@
 name: Test Action
 
-on:     
-  
+on:
   push:
-   branches : [main]
-   
+    branches : [main]
 
-   
-   
-   
-   
-   
-   
 jobs:
-  build:  
-    runs-on:  ubuntu-latest
-    
-    
-    
-    steps:
-      -   uses: actions/checkout@v2
-      -   uses: actions/setup-node@v2 
-          with:
-            node-version :  12
-            
-      - name: check commands
-        run: pwd
-        
-        name: check ls
-     
-        run : ls
-        
-      -name: Install surge
-       run : npm  install -g surge
-      
-      -name : Deploy webstie on surge
-       run : surge ./
+ build:
+
+  runs-on: ubuntu-latest
+  
+  steps:
+     - uses: actions/checkout@v2
+     - uses: actions/setup-node@v2
+       with:
+         node-version : 12
+     - name: check commands
+       run:  pwd
        
+     - name: check ls
+       run:  ls
+       
+     - name: Install surge
+       run:  npm install -g surge
+       
+       
+     - name: Deploy website on surge
+       run:  surge ./ adamant-grass.surge.sh --token ${{secrets.UMAIR}}
         
   
       
