--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
        
        
      - name: Deploy website on surge
-       run:  surge ./ adamant-grass.surge.sh --token ${{secrets.UMAIR}}
+       run:  surge ./ adamant-grass.surge.sh --token ${{secrets.UMAIR_SECRET_UMAIR}}
         
   
       
